# mote

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  firmware_mote_os.uf2  install.sh
.claude/skills/mote-game-dev/: SKILL.md
docs/: GALLERY_PLAN.md  PLAN.md  STUDIO_PLAN.md  THUMBYONE_SLOT_PLAN.md  animation.md  contributing.html  games.html  games.json  grandthumbauto-guide.html  index.html  kingsandpigs-guide.html  lavaflow-guide.html  mesh-editor-plan.md  moita-guide.html  multiplayer-lobby-design.md  redmote-guide.html  render-parity-design.md  scrapwing-guide.html  terramote-guide.html  thumbatro-guide.html  thumbprince-guide.html
docs/games/: DeepThumb.mote  GalaxySwarm.mote  GrandThumbAuto.mote  KingsandPigs.mote  LavaFlow.mote  Moita.mote  RedMote.mote  Scrapwing.mote  TerraMote.mote  ThumbAtro.mote  ThumbPrince.mote  Thumbalaga.mote  Thumboxels.mote  ThumbyRogue.mote  WolfMote.mote  Wormote.mote  arkanoid3d.mote  chess.mote  fling.mote  golf.mote  indemnity.mote  itsamemario.mote  motokart.mote  nightmote.mote  papermote.mote  pong3d.mote  tanks.mote  tetris3d.mote  thumbycraft.mote  thumbycue.mote
engine/assets/: mote_mesh.h  te_mesh.h
engine/audio/: mote_audio.c  mote_audio.h
engine/core/: mote_arena.c  mote_arena.h  mote_config.h  mote_perf.c  mote_perf.h  mote_platform.h  te_config.h  te_platform.h
engine/input/: mote_input.c  mote_input.h  te_input.c  te_input.h
engine/math/: mote_vec.h  te_vec.h
engine/physics/: mote_phys.c  mote_phys.h  mote_phys2d.c  mote_phys2d.h
engine/render/: mote_2d.c  mote_2d.h  mote_font.c  mote_font.h  mote_object.h  mote_pipe.c  mote_pipe.h  mote_raster.c  mote_raster.h  mote_scene3d.c  mote_scene3d.h  mote_sphere.h  mote_splat.c  mote_splat.h  te_object.h  te_pipe.c  te_pipe.h  te_raster.c  te_raster.h  te_scene3d.c  te_scene3d.h
examples/arkanoid3d/src/: brick.h  game.c  icon.h  lose.h  powerup.h
examples/chess/src/: bishop.h  chal.c  game.c  icon.h  knight.h  queen_crown.h  rook.h
examples/cluster/: game.toml
examples/cluster/src/: cluster_data.h  game.c  icon.h
examples/dominoes/src/: game.c  icon.h  meshes.h
examples/fesmo/: game.toml
examples/fesmo/src/: game.c  icon.h
examples/fling/assets/: random.sfx
examples/fling/src/: game.c  icon.h
examples/fontdemo/assets/: bigfont_glyphs.gsheet  tinyfont_glyphs.gsheet
examples/fontdemo/src/: bigfont.font.h  chancery.font.h  game.c  icon.h  mono.font.h  sans.font.h  serif.font.h  tinyfont.font.h  ubuntu.font.h
examples/fxdemo/src/: game.c  icon.h
examples/golf/src/: game.c  golf_gen.c  golf_gen.h  icon.h
examples/golf/tools/: club_rig.c
examples/hello-mesh/: scene.mmesh
examples/hello-mesh/assets/: scene.rig
examples/hello-mesh/src/: cube.h  game.c  icon.h  main.c  scene.h  scene.rig.h  scene_rig.h  scene_tex.h  sprite.h
examples/herodemo/: game.toml
examples/herodemo/anims/: hero.anims
examples/herodemo/levels/: level1.level  level2.level  level3.level
examples/herodemo/src/: game.c  ground.tiles.h  hero.anim.h  hero.h  icon.h  level1.level.h  level2.level.h  level3.level.h
examples/herodemo/tilesets/: ground.tileset
examples/hulls/src/: beacon.h  canister.h  courier.h  game.c  hull_solids.h  icon.h  viper.h
examples/imgdemo/src/: game.c  icon.h  logo.h  sprite.h
examples/indemnity/assets/: sfx_chaff.sfx  sfx_dock.sfx  sfx_enemy_shield_hit.sfx  sfx_jump.sfx  sfx_sc_engage.sfx  sfx_ui_deny.sfx  sfx_ui_move.sfx  wpn_blaster.sfx  wpn_flak.sfx  wpn_gauss.sfx  wpn_ion.sfx  wpn_lance.sfx  wpn_mine.sfx  (+4 more)
examples/itsamemario/: game.toml
examples/splats/: game.toml
examples/terrain/: game.toml
examples/testnew/: game.toml
examples/thumbycraft/: PLAN.md  cflags
examples/thumbycue/: game.toml
examples/tiles/: game.toml
examples/world/: game.toml
examples/zelda/: game.toml
games/chess/: arcade_description.txt  scene.mmesh
games/deepthumb/: arcade_description.txt  scene.mmesh
games/draftmote/: DESIGN.md
games/fling/: arcade_description.txt
games/golf/: game.toml
games/hangtime/: arcade_description.txt
games/indemnity/: game.toml
games/motokart/: README.md  game.toml
games/nightmote/: game.toml
games/papermote/: game.toml
games/spaceship/: ship.mmesh
games/tanks/: game.toml  scene.mmesh
games/terramote/: DESIGN.md  README.md  guide.html
games/thumbprince/: DESIGN.md
games/thumbycraft/: game.toml
games/thumbyrogue/: cflags
games/wolfmote/: game.toml
games/wormote/: arcade_description.txt
mote_kv/: game__r4_0_0
os/: mote_catalog.h  mote_icons.h  mote_launcher.c  mote_launcher.h  mote_lobby.c  mote_lobby.h  mote_menu.c  mote_menu.h  mote_netshim.c  mote_netshim.h  mote_os.c  mote_os.h  mote_ui.c  mote_ui.h  mote_ui_font_lg.h  mote_ui_font_med.h  mote_ui_font_read.h  te_os.c  te_os.h
os/device/: CMakeLists.txt  game_blob.S.in  lobby_main.c  mote_link.c  mote_link.h  mote_loader.c  mote_loader.h  mote_store.c  mote_store.h  mote_usb.c  mote_usb.h  mote_xip.c  mote_xip.h  os_main.c  os_memmap.ld  runner_main.c  store_blob.S.in  te_loader.c  te_loader.h  tusb_config.h
os/host/: mote_host.c  thumbyos_host.c
platform/device/: CMakeLists.txt  buttons.c  buttons.h  lcd_gc9107.c  lcd_gc9107.h  mote_audio_pwm.c  mote_audio_pwm.h  mote_plat_device.c  te_plat_device.c
platform/host/: mote_plat_host.c  te_plat_host.c
platform/studio/: mote_plat_studio.c  mote_plat_studio.h
relay/: README.md  mote-relay.service  mote_relay.py
scripts/: WINDOWS-README.txt  build-linux.sh  build-windows.sh  mingw-toolchain.cmake  sync-windows.sh
sdk/: game.ld  mote_anim.h  mote_anim3d.h  mote_api.h  mote_build.h  mote_icon.h  mote_module.h  mote_synth.h  mote_syscalls.c  mote_tile.h  mote_tween.h  te_api.h  te_tgm.h
studio/: .gitignore  gallery.c  gallery.h  link_net.c  link_net.h  main.c  mote.rc  motecore.c  motecore.h  usb.c  usb.h
studio/assets/: screen.cfg
tools/: bake_ui_font.sh  city2map.py  citygen.py  citypng2map.py  fontpreview.c  gen_chess_stl.py  gen_gallery.py  glyphs2font.c  mote  obj2mesh.c  obj2rig.c  ply2splat.py  stl2mesh.c  test_box.c  test_cluster.c  tex_embed.h  ttf2font.c
(+1575 files in other folders)
